# scaleup

./: .gitignore  .pylintrc  Dockerfile  README-PRODUCTION.md  README-SETUP.md  jobs.sqlite  mock.py  pyproject.toml  requirements.txt  settings.yaml
src/config/: config.py
src/routes/: main.py  scaleup.py
src/services/scaleup/: index.py  type.py
src/test/: scaleup.py
src/utility/: logger_config.py  todo.txt  utils.py
