[tool.poetry]
name = "scaleup"
version = "0.1.0"
description = "scaleup: a service that helps to autoscale other services"
authors = ["Anuj Yadav <anujy647@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
dynaconf = "^3.1.4"
requests = "^2.26.0"
uvicorn = "^0.24.0.post1"
python-json-logger = "^2.0.7"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.23"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.isort","autohooks.plugins.autopep8","autohooks.plugins.pylint"]

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"
pylint = "^3.0.3"
autohooks = "^23.10.0"
autohooks-plugin-pylint = "^23.10.0"
autohooks-plugin-isort = "^23.10.0"
autohooks-plugin-autopep8 = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
